tests/typechecking/valid/simple_fun3.ml
let rec f x = x + 1 in 
let rec f x = x + 2 in 
print_int (f 40)
