tests/typechecking/invalid/bad_parameters.ml
let rec f x = x + 1 in 
let y = f true in 
print_int 42
